[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "socialmedia-hub"
version = "3.7.0"
description = "High-performance Python SDK and API server for multi-platform social media data."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "SocialMedia-Hub" }]
keywords = [
    "social-media",
    "api",
    "sdk",
    "douyin",
    "tiktok",
    "instagram",
    "youtube",
    "twitter",
    "xiaohongshu",
    "bilibili",
    "weibo",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "anyio>=4.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]
cli = [
    "typer>=0.12",
    "rich>=13.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-xdist>=3.5",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
    "httpx>=0.27",
]

[project.scripts]
smh = "socialmedia_hub.cli.main:main"
smh-server = "socialmedia_hub.server.main:run_server"

[project.urls]
Homepage = "https://github.com/SocialMedia-Hub/SocialMedia-Hub"

[tool.hatch.build.targets.wheel]
packages = ["src/socialmedia_hub"]

[tool.hatch.build.targets.sdist]
include = [
    "src/socialmedia_hub",
    "tests",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "UP",
    "N",
    "RUF",
]
ignore = [
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803"]
"src/socialmedia_hub/resources/*.py" = ["RUF002", "RUF003", "N802", "N803"]
"src/socialmedia_hub/server/routes/*.py" = ["RUF002", "RUF003", "N802", "N803", "F811"]
"src/socialmedia_hub/server/routes/auto_*.py" = ["E501", "F811", "N802", "N803"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
warn_unused_ignores = true
files = ["src/socialmedia_hub"]
exclude = ["src/socialmedia_hub/server", "src/socialmedia_hub/cli"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "socialmedia_hub.server.main"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "socialmedia_hub.cli.main"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::ResourceWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.report]
show_missing = true
